Sample Domain 구조 변경 및 Mappper 변경