@@ -1,17 +1,16 @@
-package org.changsol.api.apps.samples.services;
+package org.changsol.api.apps.samples.service;
 
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
-import org.changsol.api.apps.samples.dtos.SampleMasterDto;
-import org.changsol.api.apps.samples.entitys.SampleMaster;
+import org.changsol.api.apps.samples.dto.SampleMasterDto;
+import org.changsol.api.apps.samples.entity.SampleMaster;
 import org.changsol.api.apps.samples.mappers.SampleMasterMapper;
-import org.changsol.api.apps.samples.repositorys.SampleMasterRepository;
+import org.changsol.api.apps.samples.repository.SampleMasterRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.webjars.NotFoundException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -21,6 +20,7 @@ public class SampleMasterService {
 
     /**
      * SampleMaster Data Get
+     *
      * @param request 검색조건
      * @return SampleMasterDto.Response 리스트
      */
@@ -30,52 +30,58 @@ public class SampleMasterService {
 
         }
 
-        return sampleMasterRepository.findAll().stream().map(SampleMaster::toResponse).collect(Collectors.toList());
+        return sampleMasterRepository.findAll()
+                .stream()
+                .map(SampleMasterMapper.INSTANCE::response)
+                .toList();
     }
 
     /**
      * SampleMaster Data Create One
+     *
      * @param createOrUpdate 생성조건
      * @return SampleMasterDto.Response
      */
     @Transactional
-    public SampleMasterDto.Response createOne(SampleMasterDto.CreateOrUpdate createOrUpdate){
+    public SampleMasterDto.Response createOne(SampleMasterDto.CreateOrUpdate createOrUpdate) {
         //New Object
-        SampleMaster sampleMaster = SampleMasterMapper.INSTANCE.entityCreate(createOrUpdate);
+        SampleMaster sampleMaster = SampleMasterMapper.INSTANCE.create(createOrUpdate);
         sampleMasterRepository.save(sampleMaster);
-        return sampleMaster.toResponse();
+        return SampleMasterMapper.INSTANCE.response(sampleMaster);
     }
 
     /**
      * SampleMaster Data Update One
-     * @param id 고유ID
+     *
+     * @param id             고유ID
      * @param createOrUpdate 갱신조건
      * @return SampleMasterDto.Response
      */
     @Transactional
-    public SampleMasterDto.Response updateOne(Long id, SampleMasterDto.CreateOrUpdate createOrUpdate){
+    public SampleMasterDto.Response updateOne(Long id, SampleMasterDto.CreateOrUpdate createOrUpdate) {
         //Find Object
         SampleMaster sampleMaster = sampleMasterRepository.findById(id).orElseThrow(() -> new NotFoundException("SampleMaster를 찾을 수 없습니다."));
 
         //Mapping
-        SampleMasterMapper.INSTANCE.entityUpdate(sampleMaster, createOrUpdate);
+        SampleMasterMapper.INSTANCE.update(sampleMaster, createOrUpdate);
 
-        return sampleMaster.toResponse();
+        return SampleMasterMapper.INSTANCE.response(sampleMaster);
     }
 
     /**
      * SampleMaster Data Delete One
+     *
      * @param id 고유 ID
      * @return SampleMasterDto.Response
      */
     @Transactional
-    public SampleMasterDto.Response deleteOne(Long id){
+    public SampleMasterDto.Response deleteOne(Long id) {
         //Find Object
         SampleMaster sampleMaster = sampleMasterRepository.findById(id).orElseThrow(() -> new NotFoundException("SampleMaster를 찾을 수 없습니다."));
 
         //Delete
         sampleMasterRepository.delete(sampleMaster);
 
-        return sampleMaster.toResponse();
+        return SampleMasterMapper.INSTANCE.response(sampleMaster);
     }
 }
